<resources>
    <string name="app_name">Fitfood</string>
    <string name="auth_account_type">FitFood</string>
    <string name="welcome_msg">Welcome back </string>
    <string name="search_hint">Looking for a recipe ?</string>


    <string name="drawer_item_home_cook">Home</string>
    <string name="drawer_item_cook">Kitchen place</string>
    <string name="drawer_item_day_cook">Recipe of the day</string>
    <string name="drawer_item_top_cook">Top recipes</string>
    <string name="drawer_item_last_cook">Lasts recipes</string>
    <string name="drawer_item_add_cook">Submit a recipe</string>
    <string name="drawer_item_display">Recipe</string>
    <string name="drawer_item_seek_cook">Advanced search</string>
    <string name="drawer_item_book">Personal place</string>
    <string name="drawer_item_mycook_book">My recipes</string>
    <string name="drawer_item_list_book">Shopping list</string>
    <string name="drawer_item_historic_book">Already done !</string>
    <string name="drawer_item_param_book">Preferences</string>
    <string name="drawer_item_account">My account</string>
    <string name="drawer_item_disconnect">Logout</string>

    <string name="feature_not_yet_available">This feature is not yet available</string>

    <string name="login_hint_mail">Email</string>
    <string name="login_title">Login</string>
    <string name="login_hint_password">Password</string>
    <string name="login_bt_connection">Connection</string>
    <string name="login_tp_register">Not yet registered? Sign up now !</string>
    <string name="login_text_error_mail">Please enter email</string>
    <string name="login_text_error_pseudo">Wrong username</string>
    <string name="login_text_error_password">Please enter a valid password</string>
    <string name="login_text_after_register">Successfully signed up ! You can log in now.</string>

    <string name="after_login_tv_title">Welcome on FitFood !</string>
    <string name="after_login_tv_moreinfo">Last step, we need to add some information to your profile</string>
    <string name="after_login_et_name">Name</string>
    <string name="after_login_et_surname">Surname</string>
    <string name="after_login_et_pseudo">Pseudo</string>
    <string name="after_login_tv_diet">Choose your diet</string>
    <string name="after_login_bt_omnivore">Omnivorous</string>
    <string name="after_login_bt_vegetarian">Vegetarian</string>
    <string name="after_login_bt_vegan">Vegan</string>
    <string name="after_login_bt_valid">Validate</string>
    <string name="after_login_text_validate">Thank you, now you can access our services</string>

    <string name="register_text_title">Create an account</string>
    <string name="register_hint_name">Name</string>
    <string name="register_error_name">Invalid name begin with capital letter</string>
    <string name="register_hint_surname">Surname</string>
    <string name="register_error_surname">Invalid surname begin with capital letter</string>
    <string name="register_hint_pseudo">Username</string>
    <string name="register_error_pseudo">Invalid username</string>
    <string name="register_hint_mail">Email address</string>
    <string name="register_error_mail">Invalid email address</string>
    <string name="register_hint_password">Password</string>
    <string name="register_error_password">\"Must contain at least one lower case letter, one upper case letter and one digit</string>
    <string name="register_hint_confirm_password">Confirm password</string>
    <string name="register_error_confirm_password">Passwords are different</string>
    <string name="register_valid_confirm_password">Passwords are valid</string>
    <string name="register_error_incomplete_form">All fields are not filled</string>
    <string name="register_error_confirm_pseudo">Username already exist</string>
    <string name="register_error_confirm_mail">Mail already use with an account</string>
    <string name="register_bt_register">Register</string>
    <string name="register_progressbar_password_veryweak">Very weak</string>
    <string name="register_progressbar_password_weak">Weak</string>
    <string name="register_progressbar_password_normal">Medium</string>
    <string name="register_progressbar_password_good">Good</string>
    <string name="register_progressbar_password_verygood">Very good</string>
    <string name="register_error_firebase">Could not register ..., please try later</string>
    <string name="register_pd_registering">Registering User ...</string>

    <string name="recipeadd_text_title">Submit a recipe</string>
    <string name="recipeadd_text_selecttitle">Choose a relevant title describing your recipe with clarity to the community.</string>
    <string name="recipeadd_text_selectinfo">Do not forget to inform the measurements of your ingredients and the allergens.</string>
    <string name="recipeadd_text_selectverif">Before submitting a recipe, make sure that it doesn\'t already exist on our platform.</string>
    <string name="recipeadd_bt_add">Share</string>

    <string name="wizard_next">Next</string>
    <string name="wizard_prev">Previous</string>
    <string name="wizard_final">Share</string>
    <string name="wizard_bt_choose">Choose image</string>
    <string name="wizard_bt_upload">Send image</string>
    <string name="wizard_select_picture">Select picture</string>
    <string name="steps">Steps</string>
    <string name="step1_title">Step 1</string>
    <string name="step2_title">Step 2</string>
    <string name="step3_title">Step 3</string>
    <string name="step4_title">Step 4</string>
    <string name="step5_title">Step 5</string>

    <string name="step_error_title">Invalid title, need at least 3 characters</string>
    <string name="step_error_categorie">Please select one category</string>
    <string name="step_error_type">Please select one type</string>
    <string name="step_error_difficulty">Please select difficulty</string>
    <string name="step_error_heat">Please enter cooking time (enter 0 if no cooking)</string>
    <string name="step_error_prepare">Please enter preparation time</string>
    <string name="step_error_forwho">Please enter number of servings</string>
    <string name="step_error_ingredients">Please enter at least one ingredient</string>
    <string name="step_error_prepsteps">Please enter at least one step</string>

    <string name="step1_et_title">Enter a title</string>
    <string name="step1_tv_title">Title</string>
    <string name="step1_tv_categorie">Category</string>
    <string name="step1_rb_vegetarien">Vegetarian</string>
    <string name="step1_rb_vegetalien">Vegan</string>
    <string name="step1_rb_omnivore">Omnivorous</string>
    <string name="step1_tv_info">Please choose the right category, it can help the community :)</string>

    <string name="step2_tv_title">Type of dish</string>
    <string name="step2_rb_starter">Starter</string>
    <string name="step2_rb_maincourse">Main dish</string>
    <string name="step2_rb_dessert">Dessert</string>
    <string name="step2_rb_sidedish">Side dish</string>
    <string name="step2_rb_appetizer">Appetizer</string>
    <string name="step2_rb_drink">Drink</string>
    <string name="step2_rb_sweets">Sweet</string>
    <string name="step2_rb_sauce">Sauce</string>
    <string name="step2_tv_difficulty">Difficulty</string>

    <string name="step2_tv_info_0">Very easy</string>
    <string name="step2_tv_info_1">Easy</string>
    <string name="step2_tv_info_2">Medium</string>
    <string name="step2_tv_info_3">Difficult</string>
    <string name="step2_tv_info_4">Very difficult</string>

    <string name="step3_tv_prepare">Preparation time</string>
    <string name="step3_tv_prephour">Hours</string>
    <string name="step3_et_prephour">0</string>
    <string name="step3_tv_prepminute">Minutes</string>
    <string name="step3_et_prepminute">0</string>
    <string name="step3_tv_heat">Cooking time</string>
    <string name="step3_tv_heathour">Hours</string>
    <string name="step3_et_heathour">0</string>
    <string name="step3_tv_heatminute">Minutes</string>
    <string name="step3_et_heatminute">0</string>
    <string name="step3_tv_nbwho">Number of servings</string>
    <string name="step3_tv_forwho">For</string>
    <string name="step3_et_nbwho">x</string>
    <string name="step3_et_forwho">People</string>
    <string name="step3_info_forwho">Example: For 6 people, for 1 liter, for 1 glass ...</string>


    <string name="step4_tv_ingredient">Ingredients (Quantity and name)</string>
    <string name="step4_et_quantity">Quantity</string>
    <string name="step4_tv_de">Of</string>
    <string name="step4_et_ingredient">Ingredient</string>
    <string name="step4_info_ingredient">Example: 2 cl of milk, 200 g of flour, 2 eggs ...</string>
    <string name="step4_invalid_ingredient">Invalid ingredient</string>
    <string name="step4_invalid_quantity">Invalid quantity</string>

    <string name="step5_tv_directions">Directions</string>
    <string name="step5_et_directions_steps">Preparation steps</string>
    <string name="step5_info_prep">Example: Season chicken with salt and pepper, roast in the preheated oven ...</string>
    <string name="step5_invalid_step">Invalid step (min 10 characters)</string>

    <string name="recipe_tv_prep_label">Preparation</string>
    <string name="recipe_tv_heat_label">Cooking</string>
    <string name="recipe_tv_final_label">Ready in</string>
    <string name="recipe_tv_hour_label">h</string>
    <string name="recipe_tv_minute_label">min</string>
</resources>
